# federated-gradients-projection

./: .gitignore  .rayignore  README.md  Research.md  pyproject.toml
flower_tutorial/: client_app.py  custom_strategy.py  server_app.py  task.py
