# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flower-tutorial"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.24.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
requires-python = ">=3.11,<3.14"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "flower_tutorial.server_app:app"
clientapp = "flower_tutorial.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
strategy = "default"
num-server-rounds = 3
fraction-train = 0.5
fraction-custom-train = 0.5  # <-- new
fraction-custom-evaluate = 0.05 # <-- updated
local-epochs = 10
lr = 0.01
batch-size = 32
model-type = "bn"  # "standard" or "bn"

# Default federation to use when running the app

#######################################################################
# CONFIGURATION MIGRATION NOTICE:
#
# What was previously called "federation config" for SuperLink
# connections in pyproject.toml has been renamed and moved.
#
# These settings are now **SuperLink connection configuration**
# and are defined in the Flower configuration file.
#
# The entries below are commented out intentionally and are kept
# only as a migration reference.
#
# Docs: https://flower.ai/docs/framework/ref-flower-configuration.html
#######################################################################

# [tool.flwr.federations]
# default = "local-simulation"

# # Local simulation federation with 10 virtual SuperNodes
# [tool.flwr.federations.local-simulation]
# options.num-supernodes = 20

# # Remote federation example for use with SuperLink
# [tool.flwr.federations.remote-federation]
# address = "<SUPERLINK-ADDRESS>:<PORT>"
# insecure = true  # Remove this line to enable TLS
# # root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup



